--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
@@ -30,8 +31,10 @@
 		"onnxruntime-web": "^1.19.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
 		"svelte": "^5.0.3",
 		"svelte-check": "^4.0.5",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.10.0",
