--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"eslint-plugin-svelte": "^2.46.0",
 		"globals": "^15.11.0",
 		"jimp": "^1.6.0",
-		"onnxruntime-web": "^1.19.2",
+		"onnxruntime-web": "1.20.0-dev.20241022-2d00351d7b",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
@@ -40,5 +40,10 @@
 		"typescript-eslint": "^8.11.0",
 		"vite": "^5.4.9",
 		"vitest": "^2.1.3"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"onnxruntime-web@1.20.0-dev.20241022-2d00351d7b": "patches/onnxruntime-web@1.20.0-dev.20241022-2d00351d7b.patch"
+		}
 	}
 }
